--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"@amap/amap-jsapi-loader": "^1.0.1",
 		"@element-plus/icons-vue": "^2.3.1",
 		"element-plus": "^2.8.0",
 		"pinia": "^2.2.2",
