--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 	"dependencies": {
 		"@amap/amap-jsapi-loader": "^1.0.1",
 		"@element-plus/icons-vue": "^2.3.1",
+		"@types/lodash": "^4.17.7",
 		"element-plus": "^2.8.0",
+		"lodash": "^4.17.21",
 		"pinia": "^2.2.2",
 		"swiper": "^11.1.12",
 		"vue": "^3.4.37",
