--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"lint-staged": "^15.2.9",
 		"prettier": "^3.3.3",
 		"recommended": "link:@vue/typescript/recommended",
+		"sass": "^1.79.3",
 		"typescript": "^5.5.4",
 		"typescript-eslint": "^8.2.0",
 		"unplugin-auto-import": "^0.18.2",
