feat(lang): 补充语言配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,6 @@
 	"files": [],
 	"references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
 	"compilerOptions": {
-		"types": ["element-plus/global"]
+		"types": ["element-plus/global", "node"]
 	}
 }
