--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vue-tsc -b && vite build",
+		"lang": "ts-node ./script/genLangTemplate.ts",
 		"preview": "vite preview",
 		"lint:fix": "prettier . --write",
 		"commit": "git-cz",
@@ -28,12 +29,14 @@
 		"@commitlint/config-conventional": "^19.2.2",
 		"@eslint/js": "^9.9.0",
 		"@iconify/json": "^2.2.244",
+		"@types/node": "^22.6.1",
 		"@vitejs/plugin-vue": "^5.1.2",
 		"cz-git": "^1.9.4",
 		"eslint": "^9.9.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
 		"eslint-plugin-vue": "^9.27.0",
+		"fs": "0.0.1-security",
 		"globals": "^15.9.0",
 		"husky": "^9.1.5",
 		"less": "^4.2.0",
@@ -42,6 +45,7 @@
 		"prettier": "^3.3.3",
 		"recommended": "link:@vue/typescript/recommended",
 		"sass": "^1.79.3",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.5.4",
 		"typescript-eslint": "^8.2.0",
 		"unplugin-auto-import": "^0.18.2",
