feat(pagemap): 添加拖拽面板分割组件

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
 		"@amap/amap-jsapi-loader": "^1.0.1",
 		"@element-plus/icons-vue": "^2.3.1",
 		"@types/lodash": "^4.17.7",
+		"@types/splitpanes": "^2.2.6",
 		"element-plus": "^2.8.0",
 		"lodash": "^4.17.21",
 		"pinia": "^2.2.2",
+		"splitpanes": "^3.1.5",
 		"swiper": "^11.1.12",
 		"vue": "^3.4.37",
 		"vue-i18n": "9",
