feat(project): 自定义配置输出模板

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
 	"version": "0.0.0",
 	"scripts": {
 		"dev": "vite",
-		"build": "vue-tsc -b && vite build",
-		"lang": "ts-node ./script/genLangTemplate.ts",
+		"build": "vue-tsc -b && vite build && pnpm run lang",
+		"template": "ts-node  --transpile-only ./script/index.ts",
+		"lang": "ts-node  --transpile-only ./script/genLangTemplate.ts",
+		"configuration": "ts-node  --transpile-only ./script/genConfigurationTemplate.ts",
 		"preview": "vite preview",
 		"lint:fix": "prettier . --write",
 		"commit": "git-cz",
@@ -16,6 +18,7 @@
 		"@element-plus/icons-vue": "^2.3.1",
 		"@types/lodash": "^4.17.7",
 		"@types/splitpanes": "^2.2.6",
+		"commitizen": "^4.3.0",
 		"element-plus": "^2.8.0",
 		"lodash": "^4.17.21",
 		"pinia": "^2.2.2",
