--- a/script/configuration.json
+++ b/script/configuration.json
@@ -1,1 +1,7 @@
-{"isSplitPaneMode":{"enable":false,"comment":"地图页面，是否需要启用面板手动控制左右板块宽度"},"findImmediatly":{"enable":false,"comment":"是否需要滑块在【勾选和关闭】、【滑动】的时候，立即执行一次寻址（已优化，不会有性能问题）"}}
+{
+	"isSplitPaneMode": { "enable": false, "comment": "地图页面，是否需要启用面板手动控制左右板块宽度" },
+	"findImmediatly": {
+		"enable": false,
+		"comment": "是否需要滑块在【勾选和关闭】、【滑动】的时候，立即执行一次寻址（已优化，不会有性能问题）"
+	}
+}
