--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"@element-plus/icons-vue": "^2.3.1",
 		"@types/lodash": "^4.17.7",
 		"@types/splitpanes": "^2.2.6",
-		"colorgrad-js": "^0.1.0",
+		"chroma-js": "^3.1.1",
 		"commitizen": "^4.3.0",
 		"element-plus": "^2.8.0",
 		"lodash": "^4.17.21",
@@ -35,6 +35,7 @@
 		"@commitlint/config-conventional": "^19.2.2",
 		"@eslint/js": "^9.9.0",
 		"@iconify/json": "^2.2.244",
+		"@types/chroma-js": "^2.4.4",
 		"@types/node": "^22.6.1",
 		"@vitejs/plugin-vue": "^5.1.2",
 		"cz-git": "^1.9.4",
